--- a/app/src/main/res/layout/activity_digitizer.xml
+++ b/app/src/main/res/layout/activity_digitizer.xml
@@ -17,14 +17,16 @@
 
     <ImageView
         android:id="@+id/touchpad_area_view"
-        android:layout_width="575dp"
-        android:layout_height="371dp"
+        android:layout_width="400dp"
+        android:layout_height="300dp"
         android:src="@drawable/touchpad"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.722" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
